--- a/src_c/meson.build
+++ b/src_c/meson.build
@@ -316,6 +316,15 @@ window = py.extension_module(
     subdir: pg,
 )
 
+_gpu = py.extension_module(
+    '_gpu',
+    'gpu.c',
+    c_args: warnings_error,
+    dependencies: pg_base_deps,
+    install: true,
+    subdir: pg
+)
+
 # TODO: support SDL3
 if sdl_api != 3
 gfxdraw = py.extension_module(
