--- a/buildconfig/Setup.Android.SDL2.in
+++ b/buildconfig/Setup.Android.SDL2.in
@@ -63,3 +63,4 @@ pixelcopy src_c/pixelcopy.c $(SDL) $(DEBUG)
 newbuffer src_c/newbuffer.c $(SDL) $(DEBUG)
 window src_c/window.c $(SDL) $(DEBUG)
 geometry src_c/geometry.c $(SDL) $(DEBUG)
+_gpu src_c/gpu.c $(SDL) $(DEBUG)
