--- a/.github/workflows/update-external-files.yml
+++ b/.github/workflows/update-external-files.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   update-external-files:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -16,8 +16,7 @@ jobs:
       
       - name: Download external file
         run: |
-          curl -sS -o src_c/include/pythoncapi_compat.h \
-          https://raw.githubusercontent.com/python/pythoncapi-compat/refs/heads/main/pythoncapi_compat.h
+          curl -sS -o src_c/include/pythoncapi_compat.h https://raw.githubusercontent.com/python/pythoncapi-compat/refs/heads/main/pythoncapi_compat.h
       
       - name: Commit changes if modified
         run: |
