--- a/.github/workflows/update-external-files.yml
+++ b/.github/workflows/update-external-files.yml
@@ -19,6 +19,8 @@ jobs:
           curl -sS -o src_c/include/pythoncapi_compat.h https://raw.githubusercontent.com/python/pythoncapi-compat/refs/heads/main/pythoncapi_compat.h
       
       - name: Commit changes if modified
+        env:
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
         run: |
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
@@ -26,7 +28,7 @@ jobs:
 
           if ! git diff --quiet --exit-code --staged; then
             git commit -m "chore: Update pythoncapi_compat.h"
-            git push
+            git push "https://$GH_TOKEN@github.com/${{ github.repository }}.git" HEAD:${{ github.ref }}
           else
             echo "No changes detected in external file"
           fi
