--- a/src_c/_sdl2/meson.build
+++ b/src_c/_sdl2/meson.build
@@ -23,6 +23,7 @@ _sdl2_controller_old = py.extension_module(
     fs.is_file('controller_old.c') ? 'controller_old.c' : cython_base / 'controller_old.pyx',
     dependencies: pg_base_deps,
     include_directories: '..',
+    link_with: c_api,
     install: true,
     subdir: pg / '_sdl2',
 )
@@ -62,6 +63,7 @@ _sdl2_controller = py.extension_module(
     'controller.c',
     dependencies: pg_base_deps,
     include_directories: '..',
+    link_with: c_api,
     install: true,
     subdir: pg / '_sdl2',
 )
